# U-Statistics-python

./: .flake8  .gitignore  CHANGELOG.md  README.md  U2V.py  U_statistic.py  U_statistics.py  V_statistic.py  V_statistics.py  computable_sequence.py  computable_sequence_with_doc.py  display.ipynb  draft.py  exp_graph.py  generate_sequences.py  graph.py  mypy.ini  pyproject.toml  readme.md  requirements.txt  requirment.txt  setup.py  slurm.sh  sum_path.py  tensor_sum.py  tensor_sum_with_doc.py  tox.ini  tst_com_o.py  utils.py
.github/workflows/: forbidden_content_check.yml  no_chinese_check.yml  python-publish.yml  style_check.yml
CHECKING/: no_chinese.py  no_print.py
U_stats/: __init__.py  utils.py  utils_math.py
U_stats/statistics/: U2V.py  U_statistics.py  V_statistics.py  __init__.py  mode_lib.py
U_stats/tensor_contraction/: __init__.py  calculator.py  mode.py  state.py
playground/: a.py  exp_U_1.py  exp_U_2.py  exp_com_o.py  exp_graph.py  exp_nodiag.py  exp_opt_einsum.py  exp_path_ours_oe.py  init.py  slurm.sh  test.py  test_2greedy.py  test_bib_mat.py  test_bool.py  test_lineg_knn.py  test_memory.py  test_mode.py  test_time.py
src/U_stats/: __init__.py  graph.py  utils.py
src/U_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/U_stats/_utils/: __init__.py  _alphabet.py  _backend.py  _convert.py  _typing.py
src/U_stats/statistics/: U2V.py  u2v.py  (+7 more)
src/u_stats/: __init__.py
tests/: conftest.py
tests/direct_einsum_or_not/: hoif.py  hoif_7.py
tests/statistics/: classical.py  ustats.py
tests/tensor_contraction/: test_path.py
(+16 files in other folders)
