[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "U_stats"
version = "0.2.0"
authors = [
    {name = "Zhang Ruiqi"}
]
description = "A Python package for U-Statistics calculation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opt_einsum"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src"]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version = "0.2.0"
version_files = [
    "pyproject.toml:version",
    "src/U_stats/__init__.py:__version__",
]
update_changelog_on_bump = true
major_version_zero = true
